--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>P - Home</title>
-  <link rel="icon" href="images/icon.jpg">
+  <link rel="icon" href="images/icon2.png">
   <link rel="stylesheet" href="https://fontawesome.com/icons/facebook?f=brands&s=solid">
   <link rel='stylesheet' href='//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
 <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
