--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="author" content="Canisorhick">
 <meta name="keywords" content="NISU - CICS">
 <meta name="keywords" content="NISU-CICS">
-<meta name="description" content="Rhick Caniso NISU - CICS" >
+<meta name="description" content="Rhick Caniso | NISU - CICS | Nothern Iloilo State University | CICS | NISU | Caniso |" >
 <meta name="description" content="NISU-CICS" >
 
 </head>
