--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">My Friend that can contact</h2>
+                    <h2 class="section-heading">My Fellow Programmer</h2>
                     <h3 class="section-subheading text-muted">My friend also a webdev that has a Active Web.</h3>
                 </div>
             </div>
