--- a/index.html
+++ b/index.html
@@ -491,7 +491,11 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Personal Inner Style</h2>
-                            <p class="item-intro text-muted">The inner me wants to make all information of myself goes to Secret.</p>
+                            <p class="item-intro text-muted">I feel a sense of confidence and contentment when I'm dressed in clothes that make me look
+                              and feel my best. Wearing presentable attire not only boosts my self-esteem but also reflects positively
+                              on my personal image. It's a simple act that can have a significant impact on my overall mood and how I approach my day.
+                              Whether it's a well-tailored suit or a stylish casual outfit, I find joy in presenting myself in a manner that aligns with
+                              my personal style and the occasion. The inner me wants to make all information of myself goes to Secret.</p>
                             <img class="img-responsive" src="images/rhick2.png" alt="">
                             <p>This image captured i don't realy remember but that time i enjoy myself.</p>
                             <p>
@@ -553,6 +557,11 @@
                             <p class="item-intro text-muted">volleyball.</p>
                             <img class="img-responsive img-centered" src="images/volleyball.jpg" alt="">
                             <p>volleyball sports that i been playing around. Just doing on it i feel active and feel happy.</p>
+                            <P>Volleyball has always been more than just a sport to me; it's a passion that ignites my spirit. The thrill of the serve,
+                              the excitement of the spike, and the camaraderie of the team make every moment on the court unforgettable. Whether it's
+                              the intense competition or the simple joy of a well-executed play,
+                              volleyball fills me with a sense of purpose and fulfillment. It's a game that demands skill, strategy, and teamwork,
+                              and I'm constantly striving to improve my abilities and contribute to the success of my team.</P>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -604,7 +613,11 @@
                             <h2>E-Sports</h2>
                             <p class="item-intro text-muted">Just playing</p>
                             <img class="img-responsive img-centered" src="images/img5.png" alt="">
-                            <p>The name of the game that i play in roblox is Bloxfruit, yeah its fun its very friendly game.</p>
+                            <p>Whenever I have a chance to unwind and relax, I turn to Bloxfruit. 
+                              It's my go-to escape from the stresses of daily life. The immersive gameplay and captivating storyline transport
+                              me to another world that allowing me to forget my worries and simply enjoy the moment.
+                              It's a perfect way to recharge my batteries and come back refreshed, ready to tackle whatever challenges may come my way.
+                              The name of the game that i play in roblox is Bloxfruit, yeah its fun its very friendly game.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
