--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/volleyball.jpg" class="img-responsive" alt="">
+                        <img src="images/volleyball1.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Sports</h4>
@@ -202,11 +202,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/food.jpg" class="img-responsive" alt="">
+                        <img src="images/church.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Foods</h4>
-                        <p class="text-muted">Fav - Food</p>
+                        <h4>Fav - Place</h4>
+                        <p class="text-muted">Church</p>
                     </div>
                 </div>
             </div>
@@ -491,13 +491,13 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Personal Inner Style</h2>
-                            <p class="item-intro text-muted">I feel a sense of confidence and contentment when I'm dressed in clothes that make me look
+                            <p class="item-intro text-muted">Fashion.</p>
+                            <img class="img-responsive" src="images/rhick2.png" alt="">
+                            <p>This image captured i don't realy remember but that time i enjoy myself. I feel a sense of confidence and contentment when I'm dressed in clothes that make me look
                               and feel my best. Wearing presentable attire not only boosts my self-esteem but also reflects positively
                               on my personal image. It's a simple act that can have a significant impact on my overall mood and how I approach my day.
                               Whether it's a well-tailored suit or a stylish casual outfit, I find joy in presenting myself in a manner that aligns with
                               my personal style and the occasion. The inner me wants to make all information of myself goes to Secret.</p>
-                            <img class="img-responsive" src="images/rhick2.png" alt="">
-                            <p>This image captured i don't realy remember but that time i enjoy myself.</p>
                             <p>
                                 <strong>Want more information?</strong>Message me. .</p>
                             <ul class="list-inline">
@@ -640,10 +640,13 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Foods</h2>
-                            <p class="item-intro text-muted">Favourite Foods.</p>
-                            <img class="img-responsive img-centered" src="images/food.jpg" alt="">
-                            
+                            <h2>FFav - Place</h2>
+                            <p class="item-intro text-muted">Church.</p>
+                            <img class="img-responsive img-centered" src="images/church.jpg" alt="">
+                             <p>I cherish the serene atmosphere of this church. It’s a place where I find solace and tranquility.
+                                 The moment I step inside, a sense of peace washes over me. The calming ambiance, coupled with 
+                                 the uplifting hymns and inspiring sermons, creates a haven where I can connect with my faith and find 
+                                comfort in God's presence. It's truly a sanctuary where my soul can rest and rejuvenate.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
