--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="keywords" content="NISU - CICS">
 <meta name="keywords" content="NISU-CICS">
 <meta name="description" content="Rhick Caniso | NISU - CICS | Nothern Iloilo State University | CICS | NISU | Caniso |" >
-<meta name="description" content="NISU-CICS" >
+<meta name="description" content="Rhick Caniso, a dedicated student at NISU CICS, strives for academic excellence and personal growth.">
 
 </head>
 <body>
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Hello Everyone!</div>
-                <div class="intro-heading">I'm Rhick IT-Student Webdev studying in NISU - CICS.</div>
+                <div class="intro-heading">I'm Rhick Caniso, a web developer and IT student at NISU-CICS.</div>
                 <a href="#services" class="page-scroll btn btn-xl">know me more</a>
             </div>
         </div>
@@ -91,8 +91,8 @@
                         <i class="glyphicon glyphicon-tree-conifer"></i>
                     </span>
                     <h4 class="service-heading">Technician</h4>
-                    <p class="text-muted">I have experience 2 years on repearing cellphone such as programming and changing ic or board of cellphone. 
-                        I give some tips how to take care of your Andriod.
+                    <p class="text-muted">I have two years of experience fixing cellphones, including programming and replacing the IC or board. 
+                        I offer some advice on how to care for your Android.
                     </p>
                 </div>
                 <div class="col-md-4">
