--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 <link rel='stylesheet' href='https://startbootstrap.com/templates/agency/font-awesome-4.1.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
 <meta name="author" content="Rhick Caniso">
-<meta name="author" content="Rhick">
-<meta name="author" content="Canisorhick">
 <meta name="keywords" content="NISU - CICS">
-<meta name="keywords" content="NISU-CICS">
-<meta name="description" content="Rhick Caniso | NISU - CICS | Nothern Iloilo State University | CICS | NISU | Caniso |" >
-<meta name="description" content="Rhick Caniso, a dedicated student at NISU CICS, strives for academic excellence and personal growth.">
+<meta name="description" content=" Rhick Caniso, a dedicated student at NISU CICS, strives for academic excellence and personal growth. | Rhick Caniso | NISU - CICS | Nothern Iloilo State University | CICS | NISU | Caniso |" >
+
 
 </head>
 <body>
