--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>P - Home</title>
+  <title>Rhick Caniso | NISU - CICS</title>
   <link rel="icon" href="images/icon2.png">
   <link rel="stylesheet" href="https://fontawesome.com/icons/facebook?f=brands&s=solid">
   <link rel='stylesheet' href='//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
