--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/rhick2.png" class="img-responsive" alt="">
+                        <img src="images/rhick3.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>My Personal Style</h4>
@@ -143,7 +143,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/img8.jpg" class="img-responsive" alt="">
+                        <img src="images/img89.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>IOT Drill Training</h4>
@@ -496,7 +496,7 @@
                               Whether it's a well-tailored suit or a stylish casual outfit, I find joy in presenting myself in a manner that aligns with
                               my personal style and the occasion. The inner me wants to make all information of myself goes to Secret.</p>
                             <p>
-                                <strong>Want more information?</strong>Message me. .</p>
+                                <strong>Want more information?</strong>Tap <a href="gallery.html"> here!</a></p>
                             <ul class="list-inline">
                                 <li>Date: July 2024</li>
                                 <li>Activity: Party</li>
