--- a/gallery.html
+++ b/gallery.html
@@ -32,8 +32,8 @@
         <figure class="img-container">
           <img src="images1/rhick2.png" />
           <figcaption class="img-content">
-            <h2 class="title">Bossing</h2>
-            <h3 class="category">Kamusta buhay buhay</h3>
+            <h2 class="title">Chilling</h2>
+            <h3 class="category">at home</h3>
           </figcaption>
           <span class="img-content-hover">
             <h2 class="title">Bossing</h2>
@@ -45,7 +45,7 @@
         <figure class="img-container">
           <img src="images1/rhick3.jpeg" />
           <figcaption class="img-content">
-            <h2 class="title">Camera Film</h2>
+            <h2 class="title">Fun</h2>
             <h3 class="category">Showcase</h3>
           </figcaption>
           <span class="img-content-hover">
@@ -59,7 +59,7 @@
           <img src="images1/rhickboss.jpg">
           <figcaption class="img-content">
             <h2 class="title">Coffee</h2>
-            <h3 class="category">Showcase</h3>
+            <h3 class="category">lover</h3>
           </figcaption>
           <span class="img-content-hover">
             <h2 class="title">Boss</h2>
@@ -71,7 +71,7 @@
         <figure class="img-container">
           <img src="images1/dagat1.jpg" />
           <figcaption class="img-content">
-            <h2 class="title">Phone</h2>
+            <h2 class="title">cold</h2>
             <h3 class="category">Showcase</h3>
           </figcaption>
           <span class="img-content-hover">
@@ -85,7 +85,7 @@
           <img src="images1/dagat2.jpg" />
           <figcaption class="img-content">
             <h2 class="title">dagat1</h2>
-            <h3 class="category">Showcase</h3>
+            <h3 class="category">sheeesh</h3>
           </figcaption>
           <span class="img-content-hover">
             <h2 class="title">Dagat</h2>
