--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/rhick3.png" class="img-responsive" alt="">
+                        <img src="images/rhick33.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>My Personal Style</h4>
@@ -143,11 +143,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/img89.jpg" class="img-responsive" alt="">
+                        <img src="images/CICS.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>IOT Drill Training</h4>
-                        <p class="text-muted">IOT Subject</p>
+                        <h4>School</h4>
+                        <p class="text-muted">University</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -521,13 +521,17 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                   <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>IOT Subject</h2>
-                            <p class="item-intro text-muted">IOT Training Drill That Can Improve our Skills</p>
-                            <img class="img-responsive img-centered" src="images/img8.jpg" alt="">
-                            <p>During class hour we use rustberry pi and Python language to manupulate it using code. after we code we situp all hardware that we need on it.</p>
-                            <p>You can message me if you want more</a>.</p>
+                            <h2>SCHOOL - UNIVERSITY</h2>
+                            <p class="item-intro text-muted">NOTHERN ILOILO STATE UNIVERSITY - COLLEGE OF INFORMATION AND COMPUTING STUDIES (CICS)</p>
+                            <img class="img-responsive img-centered" src="images/CICS.jpg" alt="">
+                           <P>My time at Nothern Iloilo State University (NISU) College of Information and Computing Studies (CICS) has been truly enriching.
+                             Our professors, with their wealth of knowledge and expertise, have been instrumental in my academic growth. 
+                             Through their insightful lectures, practical demonstrations, and patient guidance, I've gained a deep understanding 
+                             of various concepts and skills.
+                             I'm grateful for the opportunity to learn from such dedicated educators who inspire me to strive for excellence.</P>
+                            <p>You can message me if you want more information.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
