--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="images/friend2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Toto</h4>Graphic Designer</p>
+                        <h4><a href="https://eidrefnavarronisucics.site/" id="name1">Toto</a></h4>Graphic Designer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></i></a>
                             </li>
@@ -317,7 +317,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="images/friend1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Cute</h4>
+                        <h4><a href="" id="name1">Cute</a></h4>
                         <p class="text-muted">Dancer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a>
@@ -331,8 +331,8 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="images/ーCid Kagenou.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Yan Yan</h4>
+                        <img src="images/yanyan.jpg" class="img-responsive img-circle" alt="">
+                        <h4><a href="https://adriancastillonisucics.site/index.html" id="name1">Yan Yan</a></h4>
                         <p class="text-muted">Gamer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></i></a>
@@ -343,6 +343,7 @@
                             </li>
                         </ul>
                     </div>
+                </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -360,12 +361,12 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="images/rona.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Be-an</h4>Stylish</p>
+                        <img src="images/cheng.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Cheng</h4>Stylish</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></i></a>
                             </li>
-                            <li><a href="https://web.facebook.com/bheann.ngapala.3"><i class="fa-brands fa-facebook"></i></a>
+                            <li><a href="https://web.facebook.com/cherilynn.locsin.37"><i class="fa-brands fa-facebook"></i></i></a>
                             </li>
                             <li><a href="#"><i class="fa-brands fa-pinterest"></i></a>
                             </li>
