--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="images/friend1.jpg" class="img-responsive img-circle" alt="">
-                        <h4><a href="" id="name1">Cute</a></h4>
+                        <h4><a href="https://xn--loryannjoyespaolanisucics-moc.site/" id="name1">Cute</a></h4>
                         <p class="text-muted">Dancer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a>
@@ -347,12 +347,13 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="images/cheng.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Cheng</h4>Stylish</p>
+                        <img src="images/rona.jpg" class="img-responsive img-circle" alt="">
+                        <h4><a href="https://ronabemaquilingnisucics.site/" id="name1">be-an</a></h4>
+                        <p class="text-muted">stylish</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></i></a>
                             </li>
-                            <li><a href="https://web.facebook.com/cherilynn.locsin.37"><i class="fa-brands fa-facebook"></i></i></a>
+                            <li><a href="https://web.facebook.com/bheann.ngapala.3"><i class="fa-brands fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa-brands fa-pinterest"></i></a>
                             </li>
@@ -362,7 +363,8 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="images/cheng.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Cheng</h4>Stylish</p>
+                        <h4><a href="https://cherilynlocsin.site/index.html" id="name1">Cheng</a></h4>
+                        <p class="text-muted">stylish</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></i></a>
                             </li>
@@ -376,7 +378,8 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="images/ling.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Ling</h4>Artist </p>
+                        <h4><a href="https://ahliadaileamadonisucics.site/about.html" id="name1">be-an</a></h4>
+                        <p class="text-muted">Artist</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa-brands fa-square-instagram"></i></i></a>
                             </li>
@@ -532,7 +535,9 @@
                              Through their insightful lectures, practical demonstrations, and patient guidance, I've gained a deep understanding 
                              of various concepts and skills.
                              I'm grateful for the opportunity to learn from such dedicated educators who inspire me to strive for excellence.</P>
-                            <p>You can message me if you want more information.</p>
+                            <p>You can message me if you want more information.</p>p>You can message me if you want more information.</p>
+                                <h4 class="text-muted">NISU-CICS PAGES</h4>
+                                <p><a href="https://www.facebook.com/NIPSCIICS/" style="background-color: white; color: blue; border: 1px solid black;">https://www.facebook.com/NIPSCIICS/</a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
